# ai-driven-smart-news

./: .gitignore  README.md  filtered_hackernews.json  filtered_news.json  filtered_newsapi.json  hackernews_latest.json  latest_news.json  main.py  newsapi_latest.json  output.txt  pyproject.toml  setup_project.sh
.github/workflows/: ci.yml  news-fetcher.yaml  py-checker.yml  python-tests.yml
configs/: api_config.json
core/: api_config_loader.py  api_handler.py  discord_poster.py  gemini_api.py  gemini_filters.py  gemini_news_processor.py  gemini_processor.py  news_fetcher.py  news_filter.py  news_processor.py  news_saver.py
docs/: core.html  index.html  logger.html  main.html  search.js
docs/core/: api_config_loader.html  api_handler.html  discord_poster.html  gemini_api.html  gemini_filters.html  gemini_news_processor.html  gemini_processor.html  news_fetcher.html  news_filter.html  news_processor.html  news_saver.html
docs/logger/: logger_config.html
logger/: logger_config.py
scripts/: post_filtered_to_discord.py  preview_discord_post.py
tests/: test_api_handler.py  test_discord_poster.py  test_gemini_api.py  test_news_filter.py  test_news_processor.py
