[tool.poetry]
name = "ai-driven-smart-news"
version = "0.1.0"
description = "An AI-driven application for processing news and interacting with external services like APIs and Discord."
authors = ["Youth Innovations <info.youthinno@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/infoyouth/ai-driven-smart-news"
repository = "https://github.com/infoyouth/ai-driven-smart-news"
keywords = ["AI", "news", "Discord", "automation"]

packages = [
    { include = "core" },
    { include = "logger" },
    { include = "utils" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.32.4"
colorlog = "^6.7.0"
aiohttp = "^3.8.5"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "24.3.0"
ruff = "^0.0.289"
pylint = "^2.17.5"
isort = "^5.12.0"
mypy = "^1.5.1"
types-requests = "^2.31.0.20240106"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"